Bring back Clippings Manager redo, a.k.a. "undo undo" (issue #276)
- Not yet implemented: changing position of clipping within same folder

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -1187,8 +1187,8 @@ ul.fancytree-container {
 
 #mini-help-dlg {
     --width: 450px;
-    --height: 300px;
-    top: 28px;
+    --height: 312px;
+    top: 24px;
 }
 
 #shortcut-list-dlg .hlp-hdr,
